@startuml 

 left to right direction

 entity "MN_POS" as mnPos {
  포스
  --
 	POS_PID : BIGINT  <<PK>>
  --
  STORE_UNQCODE : VARCHAR(14) <<IDX>>
  POS_PROG_VER_PID : BIGINT
  FCHQ_CODE : VARCHAR(7)
  FCHQ_NM : VARCHAR(50)
  STORE_NM : VARCHAR(50)
  POS_NO : VARCHAR(20)
  POS_NM : VARCHAR(50)
  TABLE_GRP_PID : INT(11)
  CONTRACT_NO : VARCHAR(20)
  SERIAL_NO : VARCHAR(20)
  CONFRM_AT : VARCHAR(1)
  INIT_CONFRM_DT : DATETIME
  LAST_CONFRM_DT : DATETIME
  CONFRM_CNT : INT(11)
  SW_CRTF_NO : VARCHAR(20)
  HW_CRTF_NO : VARCHAR(20)
  POS_SE_CODE : VARCHAR(1)
  POS_FORM_SE_CODE : VARCHAR(1)
  PAYMENT_SE_CODE : VARCHAR(1)
  POS_PROG_VER_NO : VARCHAR(20)
  LAST_LOGIN_DT : DATETIME
  LAST_LOGIN_IP : VARCHAR(23)
  POS_IP : VARCHAR(23)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP <<IDX>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
 }

 entity "MN_POS_LOGIN_H" as mnPosLoginH {
  포스 로그인 이력
  --
  POS_LOGIN_H_PID : BIGINT  <<pk>>
  --
  POS_PID : BIGINT  <<idx>>
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  LOGIN_DE : INT  <<idx>>
  FCHQ_CODE : VARCHAR(7)
  FCHQ_NM : VARCHAR(50)
  STORE_NM : VARCHAR(50)
  POS_NO : VARCHAR(20)
  SW_CRTF_NO : VARCHAR(20)
  HW_CRTF_NO : VARCHAR(20)
  LOGIN_DT : DATETIME
  ATHNT_KEY_VAL : VARCHAR(100)
  LOGIN_IP : VARCHAR(23)
  POS_PROG_VER_NO : VARCHAR(20)
  LOGIN_STT_CODE : VARCHAR(7)
  HDD_CPCTY_VAL : VARCHAR(100)
  UPDT_VER_NM : VARCHAR(50)
  OS_VER_NM : VARCHAR(50)
  STT_CODE : VARCHAR(7)
  USE_CODE : VARCHAR(7)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
 }

 entity "MN_POS_PROG_VER" as mnPosProgVer {
   포스 프로그램 버전
   --
   POS_PROG_VER_PID : BIGINT  <<pk>>
   --
   POS_PROG_VER_NO : VARCHAR(20)
   POS_PROG_VER_NM : VARCHAR(50)
   PROG_KIND_CODE : VARCHAR(7)
   UPDATE_SE_CODE : VARCHAR(1)
   POS_PROG_VER_FILE_NM : VARCHAR(50)
   POS_PROG_VER_FILE_NM_PATH : VARCHAR(100)
   CREATOR : VARCHAR(100)
   CREATED_AT : TIMESTAMP <<idx>>
   UPDATER : VARCHAR(100)
   UPDATED_AT : TIMESTAMP
 }

 entity "MN_POS_PROG_VER_TARGET" as mnPosProgVerTarget {
   포스 프로그램 버전 적용 대상
   --
   POS_PROG_TARGET_PID : BIGINT <<pk>>
   --
   POS_PROG_VER_PID : BIGINT  <<idx>>
   POS_PID : BIGINT <<idx>>
   STORE_UNQCODE : VARCHAR(14)  <<idx>>
   FCHQ_CODE : VARCHAR(7)
   STORE_NM : VARCHAR(50)
   POS_NO : VARCHAR(20)
   POS_PROG_VER_NO : VARCHAR(20)
   POS_PROG_VER_NM : VARCHAR(50)
   PROG_SE_CODE : VARCHAR(1)
   POS_PROG_RCV_SE_CODE : VARCHAR(1)
   UPDATE_SE_CODE : VARCHAR(1)
   POS_PROG_VER_FILE_NM : VARCHAR(50)
   POS_PROG_REG_DT : DATETIME
   SW_CRTF_NO : VARCHAR(20)
   HW_CRTF_NO : VARCHAR(20)
   POS_PROG_RCV_DT : DATETIME
   POS_IP : VARCHAR(23)
   CREATOR : VARCHAR(100)
   CREATED_AT : TIMESTAMP
   UPDATER : VARCHAR(100)
   UPDATED_AT : TIMESTAMP
 }

 ' 테이블 명 변경 MN_POS_PROG_RECV_H -> MN_POS_PROG_VER_RECV_H
 entity "MN_POS_PROG_VER_RECV_H" as mnPosProgVerRecvH {
  프로그램 버전 수신 이력
  --
   POS_PROG_RECV_H_PID : BIGINT <<pk>>
   --
   POS_PROG_TARGET_PID : BIGINT <<idx>>
   POS_PID : BIGINT <<idx>>
   STORE_UNQCODE : VARCHAR(14)  <<idx>>
   FCHQ_CODE : VARCHAR(7)
   FCHQ_NM : VARCHAR(50)
   STORE_NM : VARCHAR(50)
   POS_NO : VARCHAR(20)
   POS_PROG_VER_NO : VARCHAR(20)
   POS_PROG_VER_NM : VARCHAR(50)
   PROG_SE_CODE : VARCHAR(1)
   POS_PROG_RCV_SE_CODE : VARCHAR(1)
   UPDATE_SE_CODE : VARCHAR(1)
   POS_PROG_VER_FILE_NM : VARCHAR(50)
   POS_PROG_REG_DT : DATETIME
   SW_CRTF_NO : VARCHAR(20)
   HW_CRTF_NO : VARCHAR(20)
   POS_PROG_RCV_DT : DATETIME
   POS_IP : VARCHAR(23)
   CREATOR : VARCHAR(100)
   CREATED_AT : TIMESTAMP
   UPDATER : VARCHAR(100)
   UPDATED_AT : TIMESTAMP
 }

' 포스 맥어드레스
entity "MN_POS_MAC_ADDR" as mnPosMacAddr {
  포스 맥어드레스
  --
  POS_MAC_ADDR_PID : BIGINT <<pk>>
  --
  POS_PID : BIGINT  <<idx>>
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  FCHQ_CODE : VARCHAR(7)
  STORE_NM : VARCHAR(50)
  POS_NO : VARCHAR(20)
  MAC_ADDR_VAL : VARCHAR(100)
  USE_SE_CODE : VARCHAR(1)
  DEMO_END_DE : INT
  MAC_ADDR_NOTE : VARCHAR(400)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_ENV_PREFER" as mnStmEnvPrefer {
  포스관리 환경 설정
  ENV_PREFER_PID : INT  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14)
  TAB_CODE : VARCHAR(7)
  POS_NO : VARCHAR(20)
  ENV_JSON : JSON
  PREV_ENV_JSON : JSON
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_ENV_PREFER_H" as mnStmEnvPreferH {
  포스관리 환경 설정 이력
  --
  ENV_PREFER_PID : INT  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14)
  TAB_CODE : VARCHAR(7)
  POS_NO : VARCHAR(20)
  ENV_JSON : JSON
  PREV_ENV_JSON : JSON
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_KITPTR" as mnStmKitptr{
  포스관리 주방프린터
  --
  KITPTR_PID : INT
  --

  KITPTR_PID : INT(11)  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_NO : VARCHAR(20)
  FCHQ_CODE : VARCHAR(7)
  KITPTR_NO : VARCHAR(20)
  KITPTR_NM : VARCHAR(50)
  KITPTR_TYPE_VAL : VARCHAR(100)
  KITPTR_PORT_VAL : VARCHAR(100)
  KITPTR_SPD_VAL : VARCHAR(100)
  KITPTR_PRINT_CNT : VARCHAR(100)
  KITPTR_TCP_IP_VAL : VARCHAR(100)
  KITPTR_TCP_PORT_VAL : VARCHAR(100)
  USE_AT : VARCHAR(1)
  GOODS_CNT : INT(11)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_POSFNCT_GRP" as mnStmPosFnctGrp {
  포스관리 포스 기능 그룹
  --
  POS_FNCT_GRP_PID : BIGINT(20) <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_NO : VARCHAR(20)  <<idx>>
  FCHQ_CODE : VARCHAR(7)
  GRP_CODE : VARCHAR(7)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_POSFNCT_AUTH" as mnStmFnctAuth {
  포스관리 포스 기능 인증
  --
  POS_FNCT_AUTH_PID : BIGINT(20)  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  FCHQ_CODE : VARCHAR(7)
  GRP_CODE : VARCHAR(7)
  FNCT_NO : VARCHAR(20)
  AUTH_USE_AT : VARCHAR(1)
  AUTH_AT : VARCHAR(1)
  OWNER_PRMISN_AT : VARCHAR(1)
  SALES_PRMISN_AT : VARCHAR(1)
  STAFF_PRMISN_AT : VARCHAR(1)
  DLVRY_PRMISN_AT : VARCHAR(1)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_POSFNCT_USE" as mnStmPosFnctUse {
  포스관리 포스 기능 사용
  --
  POS_FNCT_USE_PID : BIGINT(20) <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_NO : VARCHAR(20)  <<idx>>
  FCHQ_CODE : VARCHAR(7)
  FNCT_NO : VARCHAR(20)
  FNCT_USE_AT : VARCHAR(1)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_OUTPUT_KND" as mnPosOutputKnd {
  포스 출력물 템플릿
  --
  POS_OUTPUT_TMPLAT_PID : INT <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_OUTPUT_KND_CODE : VARCHAR(7)
  POS_OUTPUT_TMPLAT_CODE : VARCHAR(7)
  POS_OUTPUT_TMPLAT_NM : VARCHAR(50)
  POS_OUTPUT_TMPLAT : VARCHAR(4000)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP

}

entity "MN_POS_OUTPUT_TMPLAT" as mnPosOutputTmplat {
  포스 출력물 종류
  --
  POS_OUTPUT_KND_PID : INT  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_OUTPUT_KND_CODE : VARCHAR(7)
  POS_OUTPUT_KND_NM : VARCHAR(50)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_OUTPUT_CODE" as mnPosOutputCode {
  포스 출력물 코드
  --
  POS_OUTPUT_CODE_PID : INT
  --

  POS_OUTPUT_CODE_PID : INT <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  POS_OUTPUT_KND_CODE : VARCHAR(7)
  POS_OUTPUT_CODE : VARCHAR(7)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

entity "MN_POS_OUTPUT_LOG" as mnPosOutputLog {
  포스 출력물 로그
  --
  POS_OUTPUT_LOG_PID : INT
  --

  POS_OUTPUT_LOG_PID : INT  <<pk>>
  --
  STORE_UNQCODE : VARCHAR(14) <<idx>>
  STORE_NM : VARCHAR(50)
  CHG_DT : DATETIME
  PROCESS_SE_CODE : VARCHAR(1)
  POS_OUTPUT_KND_CODE : VARCHAR(7)
  POS_OUTPUT_TMPLAT_CODE : VARCHAR(7)
  OUTPUT_TMPLAT : VARCHAR(4000)
  DEPT_NM : VARCHAR(50)
  CREATOR : VARCHAR(100)
  CREATED_AT : TIMESTAMP  <<idx>>
  UPDATER : VARCHAR(100)
  UPDATED_AT : TIMESTAMP
}

'========================================외부 도메인================================================
entity "MN_STM_M" as mnStmM {
  외부 - 매장관리 마스터
  --
  STORE_PID : INT <<pk>>
  --
}
entity "MN_STM_POS_EXCCLC_H" as mnStmPosExcclc {
  외부 - 매장관리 포스 정산 내역
  --
  POS_EXCCLC_H_PID : BIGINT <<pk>>
  --
}


'========================================ERD DIAGRAM===============================================
mnPos ||..o{ mnPosLoginH
mnPos ||..|| mnPosProgVerTarget
mnPos ||..o{ mnPosProgVerRecvH
mnPos ||..|| mnPosMacAddr
mnPos ||..|| mnPosProgVer

mnPos ||..|| mnStmEnvPrefer
mnStmEnvPrefer ||..o{ mnStmEnvPreferH
mnPos ||..|| mnStmKitptr
mnPos ||..|| mnStmPosFnctGrp
mnPos ||..|| mnStmFnctAuth
mnPos ||..|| mnStmPosFnctUse

mnPosOutputKnd ||..o{ mnPosOutputTmplat
mnPosOutputKnd ||..o{ mnPosOutputCode

mnStmM ||..o{ mnPos
mnPos ||..o{ mnStmPosExcclc


@enduml